@@ -1,5 +1,9 @@
 2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_image_win.c. src/gimv_thumb_win.c: Don't offset help menu.
+
+2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_image_win.c: Don't show resize grip of status bar.
 	* src/gimv_thumb_win.c: Don't bind accel keys to summary mode menu.
 
